src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwF1000-dhF500-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { fixed 1000; }\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 1000 × 500, bounds: 1240 × 680, states: [Activated]
